feat: created Onion architecture project for backend api

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,23 @@
 client/node_modules
 client/.idea
+/E-Commerce-API/.vs/E-Commerce-API
+/E-Commerce-API/Core/E-Commerce-API.Application/obj
+/E-Commerce-API/Core/E-Commerce-API.Domain/obj
+/E-Commerce-API/Infrastructure/E-Commerce-API.Infrastructure/obj
+/E-Commerce-API/Infrastructure/E-Commerce-API.Persistence/obj
+
+/E-Commerce-API/Presentation/E-Commerce-API.API/obj
+/E-Commerce-API/Presentation/E-Commerce-API.Presentation/obj
+
+
+/E-Commerce-API/Core/E-Commerce-API.Application/bin
+/E-Commerce-API/Core/E-Commerce-API.Domain/bin
+/E-Commerce-API/Infrastructure/E-Commerce-API.Infrastructure/bin
+/E-Commerce-API/Infrastructure/E-Commerce-API.Persistence/bin
+
+/E-Commerce-API/Presentation/E-Commerce-API.API/bin
+/E-Commerce-API/Presentation/E-Commerce-API.Presentation/bin
+
+
+/E-Commerce-API/Presentation/E-Commerce-API.API/Controllers/WeatherForecastController.cs
+/E-Commerce-API/Presentation/E-Commerce-API.API/WeatherForecast.cs
