feat: API => DB Connection configuration

--- a/E-Commerce-API/Presentation/E-Commerce-API.API/appsettings.json
+++ b/E-Commerce-API/Presentation/E-Commerce-API.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Default": "Server=DESKTOP-FTR0AFS\\MSSQLSERVER01;Database=Ecommerce-Project;Trusted_Connection=true"
+  }
 }
