--- a/E-Commerce-API/Core/E-Commerce-API.Application/E-Commerce-API.Application.csproj
+++ b/E-Commerce-API/Core/E-Commerce-API.Application/E-Commerce-API.Application.csproj
@@ -7,4 +7,11 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Dto\" />
+    <Folder Include="Exceptions\" />
+    <Folder Include="Mapping\" />
+    <Folder Include="Repositories\" />
+  </ItemGroup>
+
 </Project>
