feat:create AppUserModel && AutoMaper && UserDto

--- a/E-Commerce-API/Infrastructure/E-Commerce-API.Persistence/E-Commerce-API.Persistence.csproj
+++ b/E-Commerce-API/Infrastructure/E-Commerce-API.Persistence/E-Commerce-API.Persistence.csproj
@@ -12,6 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.0">
       <PrivateAssets>all</PrivateAssets>
@@ -25,6 +26,11 @@
     <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="6.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="6.0.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\Core\E-Commerce-API.Application\E-Commerce-API.Application.csproj" />
+    <ProjectReference Include="..\..\Core\E-Commerce-API.Domain\E-Commerce-API.Domain.csproj" />
   </ItemGroup>
 
 </Project>
