--- a/E-Commerce-API/Core/E-Commerce-API.Application/E-Commerce-API.Application.csproj
+++ b/E-Commerce-API/Core/E-Commerce-API.Application/E-Commerce-API.Application.csproj
@@ -8,10 +8,16 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Dto\" />
     <Folder Include="Exceptions\" />
-    <Folder Include="Mapping\" />
     <Folder Include="Repositories\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\E-Commerce-API.Domain\E-Commerce-API.Domain.csproj" />
   </ItemGroup>
 
 </Project>
