--- a/E-Commerce-API/Core/E-Commerce-API.Domain/E-Commerce-API.Domain.csproj
+++ b/E-Commerce-API/Core/E-Commerce-API.Domain/E-Commerce-API.Domain.csproj
@@ -11,4 +11,8 @@
     <Folder Include="Entites\Common\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.0" />
+  </ItemGroup>
+
 </Project>
