--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.0.0",
     "@fortawesome/react-fontawesome": "^0.1.17",
     "@mui/material": "^5.5.0",
+    "@reduxjs/toolkit": "^1.8.0",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
@@ -51,6 +52,7 @@
     "react-dom": "^17.0.2",
     "react-frame-component": "^5.2.1",
     "react-highlight-words": "^0.17.0",
+    "react-hook-form": "^7.28.1",
     "react-infinite-scroller": "^1.2.5",
     "react-intl": "^5.24.7",
     "react-markdown": "^8.0.1",
@@ -63,6 +65,7 @@
     "react-simple-maps": "^2.3.0",
     "react-sticky": "^6.0.3",
     "react-syntax-highlighter": "^15.5.0",
+    "react-toastify": "^8.2.0",
     "react-tooltip": "^4.2.21",
     "react-virtualized": "^9.22.3",
     "react-window": "^1.8.6",
