feat:User regiser and login method && confiugre JWT

--- a/E-Commerce-API/Presentation/E-Commerce-API.API/appsettings.json
+++ b/E-Commerce-API/Presentation/E-Commerce-API.API/appsettings.json
@@ -6,6 +6,14 @@
     }
   },
   "AllowedHosts": "*",
+
+
+  "JWT": {
+    "ValidAudience": "http://localhost:4200",
+    "ValidIssuer": "http://localhost:5000",
+    "Secret": "JWTAuthenticationHIGHsecuredPasswordVVVp1OH7Xzyr"
+  },
+
   "ConnectionStrings": {
     "Default": "Server=DESKTOP-FTR0AFS\\MSSQLSERVER01;Database=Ecommerce-Project;Trusted_Connection=true"
   }
