--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^4.7.0",
     "@emotion/react": "^11.8.2",
     "@emotion/styled": "^11.8.1",
     "@fortawesome/free-regular-svg-icons": "^6.0.0",
@@ -16,9 +17,57 @@
     "@types/node": "^16.11.26",
     "@types/react": "^17.0.40",
     "@types/react-dom": "^17.0.13",
+    "@vx/pattern": "^0.0.199",
+    "antd": "^4.19.2",
+    "axios": "^0.26.1",
+    "chart.js": "^3.7.1",
+    "classnames": "^2.3.1",
+    "d3-fetch": "^3.0.1",
+    "d3-geo": "^3.0.1",
+    "d3-scale": "^4.0.2",
+    "fetch-jsonp": "^1.2.1",
+    "firebase": "^9.6.9",
+    "framer-motion": "^6.2.8",
+    "google-map-react": "^2.1.10",
+    "immutability-helper": "^3.1.1",
+    "layouts": "^3.0.2",
+    "lodash": "^4.17.21",
+    "moment": "^2.29.1",
+    "prop-types": "^15.8.1",
+    "querystring-es3": "^0.2.1",
+    "rc-resize-observer": "^1.2.0",
+    "rc-tween-one": "^3.0.3",
     "react": "^17.0.2",
+    "react-apexcharts": "^1.4.0",
+    "react-beautiful-dnd": "^13.1.0",
+    "react-chartjs": "^1.2.0",
+    "react-chartjs-2": "^4.0.1",
+    "react-color": "^2.19.3",
+    "react-copy-to-clipboard": "^5.0.4",
+    "react-css-theme-switcher": "^0.3.0",
+    "react-custom-scrollbars-2": "^4.4.0",
+    "react-dnd": "^15.1.1",
+    "react-dnd-html5-backend": "^15.1.2",
     "react-dom": "^17.0.2",
+    "react-frame-component": "^5.2.1",
+    "react-highlight-words": "^0.17.0",
+    "react-infinite-scroller": "^1.2.5",
+    "react-intl": "^5.24.7",
+    "react-markdown": "^8.0.1",
+    "react-number-format": "^4.9.1",
+    "react-quill": "^1.3.5",
+    "react-redux": "^7.2.6",
+    "react-resizable": "^3.0.4",
+    "react-resize-detector": "^7.0.0",
     "react-scripts": "5.0.0",
+    "react-simple-maps": "^2.3.0",
+    "react-sticky": "^6.0.3",
+    "react-syntax-highlighter": "^15.5.0",
+    "react-tooltip": "^4.2.21",
+    "react-virtualized": "^9.22.3",
+    "react-window": "^1.8.6",
+    "redux-saga": "^1.1.3",
+    "reqwest": "^2.0.5",
     "swiper": "^8.0.7",
     "typescript": "^4.6.2",
     "web-vitals": "^2.1.4"
