--- a/E-Commerce-API/Infrastructure/E-Commerce-API.Persistence/E-Commerce-API.Persistence.csproj
+++ b/E-Commerce-API/Infrastructure/E-Commerce-API.Persistence/E-Commerce-API.Persistence.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AspNetCoreInjection.TypedFactories" Version="1.2.0" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.3" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.0" />
