feat: Admin panel UI User page and category page desing

--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,8 @@
     "@fortawesome/react-fontawesome": "^0.1.17",
     "@mui/icons-material": "^5.5.1",
     "@mui/material": "^5.5.0",
+    "@mui/x-data-grid": "^5.7.0",
+    "@pandemicode/material-ui-dropzone": "^3.5.5",
     "@reduxjs/toolkit": "^1.8.0",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
@@ -34,6 +36,7 @@
     "immutability-helper": "^3.1.1",
     "layouts": "^3.0.2",
     "lodash": "^4.17.21",
+    "material-ui-dropzone": "^3.5.0",
     "moment": "^2.29.1",
     "prop-types": "^15.8.1",
     "querystring-es3": "^0.2.1",
