--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@mui/material": "^5.5.0",
     "@mui/x-data-grid": "^5.7.0",
     "@pandemicode/material-ui-dropzone": "^3.5.5",
+    "@pathofdev/react-tag-input": "^1.0.7",
     "@reduxjs/toolkit": "^1.8.0",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
@@ -22,7 +23,7 @@
     "@types/react": "^17.0.40",
     "@types/react-dom": "^17.0.13",
     "@vx/pattern": "^0.0.199",
-    "antd": "^4.19.2",
+    "antd": "^4.19.5",
     "axios": "^0.26.1",
     "chart.js": "^3.7.1",
     "classnames": "^2.3.1",
@@ -51,14 +52,15 @@
     "react-copy-to-clipboard": "^5.0.4",
     "react-css-theme-switcher": "^0.3.0",
     "react-custom-scrollbars-2": "^4.4.0",
-    "react-dnd": "^15.1.1",
-    "react-dnd-html5-backend": "^15.1.2",
+    "react-dnd": "^14.0.2",
+    "react-dnd-html5-backend": "^14.0.0",
     "react-dom": "^17.0.2",
     "react-frame-component": "^5.2.1",
     "react-highlight-words": "^0.17.0",
     "react-hook-form": "^7.28.1",
     "react-infinite-scroller": "^1.2.5",
     "react-intl": "^5.24.7",
+    "react-loader-spinner": "^6.0.0-0",
     "react-markdown": "^8.0.1",
     "react-number-format": "^4.9.1",
     "react-quill": "^1.3.5",
@@ -69,6 +71,8 @@
     "react-simple-maps": "^2.3.0",
     "react-sticky": "^6.0.3",
     "react-syntax-highlighter": "^15.5.0",
+    "react-tag-autocomplete": "^6.3.0",
+    "react-tag-input": "^6.8.0",
     "react-toastify": "^8.2.0",
     "react-tooltip": "^4.2.21",
     "react-virtualized": "^9.22.3",
@@ -104,6 +108,8 @@
     ]
   },
   "devDependencies": {
+    "@types/react-tag-autocomplete": "^6.1.1",
+    "@types/react-tag-input": "^6.1.3",
     "react-router-dom": "^6.2.2"
   }
 }
