feat: Adding Sorting,Search,Filters product functionaly to Clien side and API

--- a/E-Commerce-API/Presentation/E-Commerce-API.API/E-Commerce-API.API.csproj
+++ b/E-Commerce-API/Presentation/E-Commerce-API.API/E-Commerce-API.API.csproj
@@ -5,6 +5,7 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <RootNamespace>E_Commerce_API.API</RootNamespace>
+    <UserSecretsId>152fafda-a49b-4e1a-8533-6240b744134e</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
