--- a/E-Commerce-API/Infrastructure/E-Commerce-API.Infrastructure/E-Commerce-API.Infrastructure.csproj
+++ b/E-Commerce-API/Infrastructure/E-Commerce-API.Infrastructure/E-Commerce-API.Infrastructure.csproj
@@ -10,6 +10,11 @@
   <ItemGroup>
     <PackageReference Include="CloudinaryDotNet" Version="1.15.2" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="6.0.0" />
+    <PackageReference Include="Stripe.net" Version="39.66.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\Core\E-Commerce-API.Domain\E-Commerce-API.Domain.csproj" />
   </ItemGroup>
 
 </Project>
