--- a/client/package.json
+++ b/client/package.json
@@ -80,6 +80,7 @@
     "react-tooltip": "^4.2.21",
     "react-virtualized": "^9.22.3",
     "react-window": "^1.8.6",
+    "recharts": "^2.1.9",
     "redux-saga": "^1.1.3",
     "reqwest": "^2.0.5",
     "swiper": "^8.0.7",
@@ -89,7 +90,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "set BUILD_PATH=../E-Commerce-API/Presentation/E-Commerce-API.API/wwwroot&& react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
