--- a/E-Commerce-API/Presentation/E-Commerce-API.API/appsettings.json
+++ b/E-Commerce-API/Presentation/E-Commerce-API.API/appsettings.json
@@ -14,6 +14,12 @@
     "Secret": "JWTAuthenticationHIGHsecuredPasswordVVVp1OH7Xzyr"
   },
 
+  "Cloudinary": {
+    "ClodName": "dybn1vxdu",
+    "ApiKey": "532983723564489",
+    "ApiSecret": "ZYXm-emN5U-YXtBp7HW6gi2BpkE"
+  },
+
   "ConnectionStrings": {
     "Default": "Server=DESKTOP-FTR0AFS\\MSSQLSERVER01;Database=Ecommerce-Project;Trusted_Connection=true"
   }
