--- a/E-Commerce-API/Infrastructure/E-Commerce-API.Infrastructure/E-Commerce-API.Infrastructure.csproj
+++ b/E-Commerce-API/Infrastructure/E-Commerce-API.Infrastructure/E-Commerce-API.Infrastructure.csproj
@@ -7,4 +7,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="CloudinaryDotNet" Version="1.15.2" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="6.0.0" />
+  </ItemGroup>
+
 </Project>
